<resources>
    <string name="app_name">Arvind WholeSale</string>
    <string name="reset">Reset</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">Name</string>
    <string name="Forgot_password">Forgot Password !</string>
    <string name="Mail_sent_text">A mail with reset link have been sent to your mail ID</string>
    <string name="Invalid_mail">Please Enter a valid User Mail</string>
    <string name="title_activity_itemlist2">Products List</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="item_name">Item Name</string>
    <string name="title_activity_add_update_item">addUpdateItem</string>
    <string name="category">Category</string>
    <string name="item_image">Item Image</string>
    <string name="AddImage">Add Picture</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
</resources>
