<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    tools:context=".addupdateitem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layerType="hardware">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ItemNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:autofillHints="@string/item_name"
                android:background="@drawable/roundedittext"
                android:hint="@string/item_name"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:padding="10dp"
                tools:layout_editor_absoluteX="33dp" />

            <EditText
                android:id="@+id/ItemCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ItemNameEditText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/roundedittext"
                android:hint="@string/category"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <ImageView
                android:layout_below="@id/ItemCategory"
                android:layout_width="100dp"
                android:layout_centerHorizontal="true"
                android:layout_height="100dp"
                android:background="@color/cardview_dark_background"
                android:layout_marginTop="30dp"
                android:tooltipText="@string/AddImage"
                android:id="@+id/ImageView"
                android:onClick="setImage"
                android:contentDescription="@string/item_image" />
            <Button
                android:id="@+id/Button_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundbutton"
                android:text="@string/register" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>