<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    tools:context=".Forgot_Password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/EditText_EmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="250dp"
            android:layout_marginRight="10dp"
            android:autofillHints="@string/user_name"
            android:background="@drawable/roundedittext"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Button
            android:id="@+id/Button_Reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditText_EmailID"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundbutton"
            android:onClick="Reset"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/userInterraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button_Reset"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/Mail_sent_text"
            android:visibility="gone" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>